# CPPIniParser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
examples/: ini_demo.cpp  sample.ini
include/cppini/: IniParser.hpp
tests/: test_ini.cpp
